--- a/languages/c/cpp.org
+++ b/languages/c/cpp.org
@@ -1,3 +1,4 @@
+- codebases https://bisqwit.iki.fi/jutut/kuvat/programming_examples/
 - SerenityOS https://github.com/awesomekling/serenity
 - Books https://stackoverflow.com/questions/388242/the-definitive-c-book-guide-and-list/388282#388282
 - Video: C++ for C programmers -- lesson 1 (classes, constructors, methods, templates, is it efficient?)
