--- a/ai.org
+++ b/ai.org
@@ -1,3 +1,4 @@
+- Course: zero to neural networks https://www.youtube.com/@datacorelinux/videos
 - https://microsoft.github.io/generative-ai-for-beginners/#/
 - books https://github.com/aridiosilva/AI_Books/
 - https://uvadlc-notebooks.readthedocs.io/en/latest/index.html
