--- a/hardware/analog/ics/opamp.org
+++ b/hardware/analog/ics/opamp.org
@@ -9,6 +9,7 @@
 [[https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Op-amp_symbol.svg/375px-Op-amp_symbol.svg.png]]
 
 - wiki https://en.wikipedia.org/wiki/Operational_amplifier
+- https://mysite.du.edu/~etuttle/electron/elect3.htm
 
 - 1941 with vacuum tubes
 - 1963 first IC
@@ -18,15 +19,48 @@
   - supports both DC and AC
 - High gains +100000x
 - impedance
-  - high INPUT
-  - low OUTPUT
+  - high INPUT (aka "no current can flow IN")
+  - low OUTPUT (aka "we could draw as much current as we want")
 
 - Rules
   1) no ~current~ flows IN or OUT of the inputs (V+, V-)
   2) tries to keep the inputs the same ~voltage~ (only for closed loop)
      it does it with the output feedback
 
-* power supply
+* ICs
+** specs
+
+- *Voff* = Offset voltage
+  - output voltage when difference between inputs is zero
+  - ideal zero
+  - real world 1mV to 10mV
+- *GBP* = Gain-Bandwidth Product
+  - frequency response of opamp
+  - real world values 500kHz to 20MHz
+- *Zout* = Output Impedance
+- *Zin* = Input Impedance
+  - ratio of _input voltage_ to _input current_
+  - in Ohms
+- *Avo* = Open Loop gain
+  - Gain without feedback
+
+** pinout
+
+#+CAPTION: mostly consistent between models and through time
+#+ATTR_ORG: :width 200
+[[https://mysite.du.edu/~etuttle/electron/circ23.gif]]
+
+** output types
+
+- rail-to-rail: (eg TLV2460)
+  - where it can provide output between the power supply rails(aka ranges)
+  - more expen$ive
+
+- other??? (eg LM358)
+  - cheaper
+  - they have a _head room_ where the output cannot reach
+
+** power supply
 
 1) bipolar/split/dual: -12v,0v,+12v
    - used by hifi audio amplifiers
@@ -40,25 +74,49 @@
    - used by along digital circuits
    - canNOT return negative voltages (chops it off)
 
+** examples
+|---------+-----+---+----+-----+---------+---------------------|
+|         | DIP | n | pw | Vcc | GBP Mhz |                     |
+|---------+-----+---+----+-----+---------+---------------------|
+| LM324   |  14 | 4 | s  |  32 |       1 |                     |
+| LM358   |   8 | 2 | s  |  32 |     1.2 | high ESD protection |
+| CA3140  |   8 | 1 | d  |  18 |     4.5 | MOS+Bip ++Iimp ++Oi |
+| CA3240  |   8 | 2 | d  |  18 |     4.5 | MOS+Bip ++Iimp ++Oi |
+| MCP6002 |   8 | 2 | s  |   6 |       1 | rail-to-rail output |
+| MCP6022 |   8 | 2 | s  |   6 |      10 | rail-to-rail output |
+| NE5532  |   8 | 2 | d  |  15 |      10 | low noise           |
+| TL072   |   8 | 2 | d  |  20 |    5.25 | FET, low THD 0.0003 |
+|---------+-----+---+----+-----+---------+---------------------|
 * use cases
+
+see https://www.electronics-tutorials.ws/opamp/opamp_1.html
 
 - DSP, signal conditioning
 - Dual power supply, DAC
-- Operation = they were used to peform math operations in analog computers
-  - addition
-  - subtraction?
-  - integration
-  - multiplication
-  - logarithm
-    - in rf carriers, nedded to dynamically adjust gain ans o maximize SNR over a wide dynamic range of received inputs on carriers at Mhz or GHz
-  - differentiation?
-    - it takes the difference between inputs and amplifies it?
+- voltage followers
+- summing
+  [[https://www.allaboutelectronics.org/wp-content/uploads/2020/10/Summing-Amplifier-1-768x308.png]]
+- integrators - Vout = - int(Vin*(dt/(Rin*C)))
+  - square -> triangle
+  - triangle -> sine
+  [[https://www.electronics-tutorials.ws/wp-content/uploads/2018/05/opamp-opamp26.gif]]
+- differentiators - Vout = R3/R1 * (V2-V1)
+  [[https://www.electronics-tutorials.ws/wp-content/uploads/2018/05/opamp-opamp18.gif]]
+- LPF
+- HPF
+- Multivibrator
+- constant current source/load
+- non/inverting differences
+- schmit trigger
+- logarithm
+  - in rf carriers, nedded to dynamically adjust gain ans o maximize SNR over a wide dynamic range of received inputs on carriers at Mhz or GHz
 
 *   open loop
 
 - gain is typically around 100k (not practical)
 - it's easy for the OUTPUT to get saturated
   - as such it can be used as comparator (poor's man)
+  - to interface digital with digital electronics
 #+ATTR_ORG: :width 150
 [[https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Op-amp_open-loop_1.svg/255px-Op-amp_open-loop_1.svg.png]]
 
@@ -68,28 +126,37 @@
 - We give it a ~negative feedback~
 - The higher Rf, the higher the gain
 
-- Configurations
+** 1) (Unity Gain) Buffer
 
-  1) (Unity Gain) Buffer:
-     - tied Vout and V- input
-     - special case of 2) with no resistance
+- aka "Voltage Follower"
+- tied Vout and V- input
+- special case of "non-inverting" with no resistance
 
-  2) Non Inverting Amplifier: signal goes into V+
-     - GAIN = Av = Rf/Ri + 1
-       Rf feedback resistor
-       Ri   ground resistor
-     #+ATTR_ORG: :width 200
-     [[https://upload.wikimedia.org/wikipedia/commons/4/44/Op-Amp_Non-Inverting_Amplifier.svg]] [[https://pfnicholls.com/Electronics_Resources/Images/NonInvAmpAC.png]]
+** 2) Non Inverting Amplifier
 
-  3) Inverting Amplifier: signal goes into V-
-     - You are NEVER going to get a negative OUTPUT voltage
-       - if you have a single supply power?
-     - Creates a ~virtual ground~ after R1
-     - GAIN = Av = -Rf/R1
-     #+ATTR_ORG: :width 200
-     [[https://upload.wikimedia.org/wikipedia/commons/4/41/Op-Amp_Inverting_Amplifier.svg]] [[https://pfnicholls.com/Electronics_Resources/Images/InvAmpAC.png]]
+- signal goes into V+
+- Vin = Vout + Ri/(Ri+Rf)
+- GAIN
+  = Av
+  = Vout / Vin
+  = Rf/Ri + 1
+- Rf feedback resistor
+- Ri   ground resistor
+#+ATTR_ORG: :width 200
+[[https://upload.wikimedia.org/wikipedia/commons/4/44/Op-Amp_Non-Inverting_Amplifier.svg]] [[https://pfnicholls.com/Electronics_Resources/Images/NonInvAmpAC.png]]
+
+** 3)     Inverting Amplifier
+
+- signal goes into V-
+- You are NEVER going to get a negative OUTPUT voltage
+  - if you have a single supply power?
+- Creates a ~virtual ground~ after R1
+- GAIN = Av = Vout/Vin = -Rf/R1
+#+ATTR_ORG: :width 200
+[[https://upload.wikimedia.org/wikipedia/commons/4/41/Op-Amp_Inverting_Amplifier.svg]] [[https://pfnicholls.com/Electronics_Resources/Images/InvAmpAC.png]]
 
 * Videos
 
-- 14 EEVblog  | #600 - OpAmps Tutorial - What is an Operational Amplifier? https://www.youtube.com/watch?v=7FYHt5XviKc
+- 14 EEVblog  |  600 - OpAmps Tutorial - What is an Operational Amplifier? https://www.youtube.com/watch?v=7FYHt5XviKc
+- 21 EEVBlog  | 1436 - The TOP 5 Jellybean OPAMP's https://www.youtube.com/watch?v=uq1DMWtjL2U
 - 23 Dronebot |Op-Amps - Using Operational Amplifiers https://www.youtube.com/watch?v=_HHxV-7alwE
