--- a/hardware/analog/ics/synths.org
+++ b/hardware/analog/ics/synths.org
@@ -1,9 +1,13 @@
 - https://www.sequencer.de/synth/index.php/Chips_in_Synthesizers
 - http://www.synthechnics.com/contents/pt/d6_Integrated_Circuits.html
 
-- BDD
+- OTA = Operational Transductance Amplifiers
+  - https://en.wikipedia.org/wiki/Operational_transconductance_amplifier
+  - LM13600N/LM13700N
+  - CA3080
+
+- BBD https://en.wikipedia.org/wiki/Bucket-brigade_device
   - http://www.synthechnics.com/contents/pt/d45_BBDs.html
-  - https://en.wikipedia.org/wiki/Bucket-brigade_device
   - TDA1022 (1976) - bucket bridge delay line for analogue signals
     - project
       - flanger https://www.freestompboxes.org/viewtopic.php?t=28430
