--- a/hardware/analog/components/transistors.org
+++ b/hardware/analog/components/transistors.org
@@ -7,7 +7,8 @@
 #+CAPTION: case styles, 18, 92, 220...
 [[https://midwestsurplus.net/media/case.gif]]
 
-#+ATTR_ORG: :width 200
+#+CAPTION: BJT symbols
+#+ATTR_ORG: :width 150
 [[https://practicalee.com/wp-content/uploads/2019/04/symbols_bjts.jpg]]
 
 - You can think of a transistors as
@@ -35,56 +36,57 @@
 * Classification
 ** FET (Field Effect Transistor)
 
-https://en.wikipedia.org/wiki/Field-effect_transistor
-
-#+CAPTION: JFET / MOSFET
 [[https://i.ytimg.com/vi/euXR2blqlDE/maxresdefault.jpg]]
 
+- https://en.wikipedia.org/wiki/Field-effect_transistor
 - 1925/195-
 - aka "unipolar transistors"
-- Uses an electric field to control the flow of current in a semiconductor.
-- Types
-  1) JFET (Junction FET)
-  2) MOSFET (Metal-Oxide-Semiconductor FET)
-
-#+CAPTION: traversal cut
-#+ATTR_ORG: :width 200
-[[https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Lateral_mosfet.svg/800px-Lateral_mosfet.svg.png]]
-
+- voltage controlled
+- Uses an ~electric field~ to control the flow of current in a semiconductor.
 - terminals/legs
   1) source
   2) gate: control the flow of current by applying voltage here, which alters the conductivity
   3) drain
 
+***   JFET (Junction FET)
+
+- in ~N-type~ applying negative voltage in gate would increase depletion region
+#+ATTR_ORG: :width 150
+[[https://eepower.com/uploads/articles/Fig1-An-overview-of-the-field-effect-transistor-fet.jpg]]
+
+*** MOSFET (Metal-Oxide-Semiconductor FET)
+
+- a block of ~P-type~ with probes of ~N-type~ (in N-type transistors)
+- a metal gate layer above a insulating oxide layer
+- when a (+) is given to the gate,
+  it pulls electrons making the whole middle section N-type
+  closing the circuit
+#+ATTR_ORG: :width 200
+[[https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Lateral_mosfet.svg/800px-Lateral_mosfet.svg.png]]
+
 ** BJT (Bipolar Junction Transistors)
 
-https://en.wikipedia.org/wiki/Bipolar_junction_transistor
-
+- https://en.wikipedia.org/wiki/Bipolar_junction_transistor
 - The most common
 - Uses both *electrons* and *electron holes* as charge carriers.
-- Packaging
-  1) SOT: Small Outline Transistor
-  2) TO: Transistor Outline
-  3) TO-3: metal semiconductor package
-- Types
-  - NPN
-  - PNP
+- Can work as a current controlled switch
+- Multiplies (~100x) current (the Betha)
+- Types: NPN, PNP
+- Legs: emitter, collector, base
 
 #+CAPTION: cross section NPN BJT
 #+ATTR_ORG: :width 200
-[[https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/NPN_BJT_%28Planar%29_Cross-section.svg/1024px-NPN_BJT_%28Planar%29_Cross-section.svg.png]]
+[[https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/NPN_BJT_%28Planar%29_Cross-section.svg/1024px-NPN_BJT_%28Planar%29_Cross-section.svg.png]] [[https://ecstudiosystems.com/discover/textbooks/basic-electronics/bipolar-junction-transistors/images/npn-forward-reverse-bias.jpg]]
 
-- Legs
-  * Base      (p/n)
-  * Emitter   (n/p)
-  * Collector (p/n)
+#+CAPTION: operating regions of BJT at different base currents Ib
+[[https://toshiba.semicon-storage.com/content/dam/toshiba-ss-v3/master/en/semiconductor/knowledge/faq/mosfet_brt/are-transistors-driven-by-current-or-voltage_1_en.jpg]]
 
 * Projects
 - https://www.inventable.eu/2010/08/03/calimaro-un-robot-old-style/
 
 
 * Models
-- bc327/bc337 https://www.inventable.eu/2018/04/18/los-transistores-bc327-y-bc337/
+- BC327/BC337 https://www.inventable.eu/2018/04/18/los-transistores-bc327-y-bc337/
 ** BC548
 
 - https://en.wikipedia.org/wiki/BC548
@@ -106,12 +108,3 @@ https://en.wikipedia.org/wiki/Bipolar_junction_transistor
 - TO-92 (TO-18 antes)
 - Equivalente a BC337/BC548
 - maximo 800mA corriente de colector
-
-** 78xx / 79xx
-
-- https://en.wikipedia.org/wiki/78xx
-- https://www.inventable.eu/2023/05/17/reguladores-tension-78l/
-
-- 78xx - positive (linear) voltage regulators
-- 79xx - negative (linear) voltage regulators
-- xx = indicate the _output_ voltage
